--- a/sass_exercise_4-selectors_extend/index.html
+++ b/sass_exercise_4-selectors_extend/index.html
@@ -5,25 +5,27 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <div>
-            <h1>Sass exercise 4 - selectors and extend method</h1>
-            <h2>Sass exercise 4 - subtitle</h2>
-            <section>
-                <article>
+        <div class="bigbox">
+            <div class="top">
+                <h1 class="title">Sass exercise 4 - selectors and extend method</h1>
+                <h2 class="title_smaller">Sass exercise 4 - subtitle</h2>
+            </div>
+            <section class="center">
+                <article class="box1">
                     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
                 </article>
-                <article>
+                <article class="box2">
                     <p>"Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
                 </article> 
-                <article>
+                <article class="box3">
                     <p>"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."</p>
                 </article> 
-                <article>
+                <article class="box4">
                     <p>"Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
                 </article>
             </section>
-            <section>
-                <article>
+            <section class="bot">
+                <article class="low">
                     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
                 </article>
             </section>
